objects/Nebula__LogEntryEvent__e.object
<CustomObject>
    <description>Platform Event object used by Nebula Logger for publishing debug and exception log entries</description>
    <fields>
        <fullName>Nebula__ApiVersion__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>API Version</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__ComponentType__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Component Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__DatabaseResultCollectionSize__c</fullName>
        <complianceGroup>None</complianceGroup>
        <description>The number of items contained in the collection of database results</description>
        <label>Database Result Collection Size</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__DatabaseResultCollectionType__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Database Result Collection Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__DatabaseResultJson__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Database Result JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nebula__DatabaseResultType__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Database Result Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__EpochTimestamp__c</fullName>
        <complianceGroup>None</complianceGroup>
        <description>Timestamp in milliseconds elapsed since 1 January 1970 of the log event</description>
        <label>Epoch Timestamp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__ExceptionMessage__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Exception Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nebula__ExceptionStackTrace__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Exception Stack Trace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nebula__ExceptionType__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Exception Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__HttpRequestBodyMasked__c</fullName>
        <complianceGroup>None</complianceGroup>
        <defaultValue>false</defaultValue>
        <label>HTTP Request Body Masked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nebula__HttpRequestBody__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>HTTP Request Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nebula__HttpRequestCompressed__c</fullName>
        <complianceGroup>None</complianceGroup>
        <defaultValue>false</defaultValue>
        <label>HTTP Request Compressed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nebula__HttpRequestEndpoint__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>HTTP Request Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__HttpRequestMethod__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>HTTP Request Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__HttpResponseBodyMasked__c</fullName>
        <complianceGroup>None</complianceGroup>
        <defaultValue>false</defaultValue>
        <label>HTTP Response Body Masked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nebula__HttpResponseBody__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>HTTP Response Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nebula__HttpResponseHeaderKeys__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>HTTP Response Header Keys</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nebula__HttpResponseStatusCode__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>HTTP Response Status Code</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__HttpResponseStatus__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>HTTP Response Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsAggregateQueriesMax__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Aggregate Queries Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsAggregateQueriesUsed__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Aggregate Queries Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsAggregateQueryMax__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Limits AggregateQueryMax_</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsAsyncCallsMax__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Async Calls Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsAsyncCallsUsed__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Async Calls Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsCalloutsMax__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Callouts Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsCalloutsUsed__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Callouts Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsCpuTimeMax__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>CPU Time Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsCpuTimeUsed__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>CPU Time Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsDmlRowsMax__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>DML Rows Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsDmlRowsUsed__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>DML Rows Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsDmlStatementsMax__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>DML Statements Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsDmlStatementsUsed__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>DML Statements Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsEmailInvocationsMax__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Email Invocations Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsEmailInvocationsUsed__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Email Invocations Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsFutureCallsMax__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Future Calls Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsFutureCallsUsed__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Future Calls Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsHeapSizeMax__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Heap Size Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsHeapSizeUsed__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Heap Size Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsMobilePushApexCallsMax__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Mobile Push Apex Calls Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsMobilePushApexCallsUsed__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Mobile Push Apex Calls Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsPublishImmediateDmlStatementsMax__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Publish Immediate Statements DML Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsPublishImmediateDmlStatementsUsed__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Publish Immediate Statements DML Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsQueueableJobsMax__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Queueable Jobs Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsQueueableJobsUsed__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Queueable Jobs Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsSoqlQueriesMax__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>SOQL Queries Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsSoqlQueriesUsed__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>SOQL Queries Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsSoqlQueryLocatorRowsMax__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>SOQL Query Locator Rows Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsSoqlQueryLocatorRowsUsed__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>SOQL Query Locator Rows Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsSoqlQueryRowsMax__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>SOQL Query Rows Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsSoqlQueryRowsUsed__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>SOQL Query Rows Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsSoslSearchesMax__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>SOSL Searches Max</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LimitsSoslSearchesUsed__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>SOSL Searches Used</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__Locale__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>Locale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__LoggedById__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>Logged By ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__LoggedByUsername__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__LoggerVersionNumber__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Logger Version Number</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__LoggingLevelOrdinal__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>Logging Level Ordinal</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__LoggingLevel__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>Logging Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__LoginApplication__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>Login Application</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__LoginBrowser__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>Login Browser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__LoginDomain__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>DEPRECATED: Login Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__LoginHistoryId__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>Login History ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__LoginPlatform__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>Login Platform</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__LoginType__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>Login Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__LogoutUrl__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Logout URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__MessageMasked__c</fullName>
        <complianceGroup>None</complianceGroup>
        <defaultValue>false</defaultValue>
        <label>Message Masked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nebula__MessageTruncated__c</fullName>
        <complianceGroup>None</complianceGroup>
        <defaultValue>false</defaultValue>
        <label>Message Truncated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nebula__Message__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nebula__NetworkId__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>Network ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__NetworkLoginUrl__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>Site Login URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__NetworkLogoutUrl__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>Site Logout URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__NetworkName__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <description>The name of the user&apos;s Community site (based on NetworkId).</description>
        <label>Site Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__NetworkSelfRegistrationUrl__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>Site Self Registration URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__NetworkUrlPathPrefix__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <description>The UrlPathPrefix is a unique string at the end of the URL for this community. For example, in the community URL CommunitiesSubdomainName.force.com/customers, customers is the UrlPathPrefix.</description>
        <label>Site URL Path Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__OrganizationDomainUrl__c</fullName>
        <complianceGroup>None</complianceGroup>
        <description>The value returned from Url..getOrgDomainUrl()</description>
        <label>Organization Domain URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__OrganizationEnvironmentType__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Organization Environment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__OrganizationId__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Organization ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__OrganizationInstanceName__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Organization Instance Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__OrganizationName__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__OrganizationNamespacePrefix__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Organization Namespace Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__OrganizationType__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Organization Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__OriginLocation__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Origin Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__OriginType__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Origin Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__ParentLogTransactionId__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>Parent Log Transaction ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__ProfileId__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>Profile ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__ProfileName__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__RecordCollectionSize__c</fullName>
        <complianceGroup>None</complianceGroup>
        <description>The number of items contained in the collection of database results</description>
        <label>Related Record Collection Size</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__RecordCollectionType__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Related Record Collection Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__RecordId__c</fullName>
        <complianceGroup>None</complianceGroup>
        <description>The ID of the record associated with a particular log entry. This is used for addRecordDebugEntry &amp; addRecordExceptionEntry methods</description>
        <label>Related Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__RecordJsonMasked__c</fullName>
        <complianceGroup>None</complianceGroup>
        <defaultValue>false</defaultValue>
        <label>Record JSON Masked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nebula__RecordJson__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Related Record JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nebula__RecordSObjectClassification__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Related Record SObject Classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__RecordSObjectTypeNamespace__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Related Record Object Namespace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__RecordSObjectType__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Related Record SObject Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__Scenario__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>Scenario</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__SessionId__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>SessionId</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__SessionSecurityLevel__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>Session Security Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__SessionType__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>Session Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__SourceIp__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>Source IP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__StackTrace__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Stack Trace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nebula__SystemMode__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>System Mode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__Tags__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Tags</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nebula__ThemeDisplayed__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Theme Displayed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__TimeZoneId__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>Time Zone ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__TimeZoneName__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>Time Zone Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__TimestampString__c</fullName>
        <complianceGroup>None</complianceGroup>
        <description>This field is used to circumvent a platform limitation - platform event datetimes are not accurately transferred to Apex triggers. This field stores a string version of the timestamp, which is then converted back to a datetime in Apex triggers.</description>
        <label>Timestamp String</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__Timestamp__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Timestamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Nebula__Topics__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>DEPRECATED: Topics</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nebula__TransactionEntryNumber__c</fullName>
        <complianceGroup>None</complianceGroup>
        <description>The sequential number of this log entry within the transaction</description>
        <label>Entry #</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__TransactionId__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Transaction ID</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__TriggerIsExecuting__c</fullName>
        <complianceGroup>None</complianceGroup>
        <defaultValue>false</defaultValue>
        <label>Trigger Is Executing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nebula__TriggerOperationType__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Trigger Operation Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__TriggerSObjectType__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Trigger SObject Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__UserLicenseDefinitionKey__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <description>https://developer.salesforce.com/docs/atlas.en-us.object_reference.meta/object_reference/sforce_api_objects_userlicense.htm</description>
        <label>User License Definition Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__UserLicenseId__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>User License ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__UserLicenseName__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>User License Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__UserLoggingLevelOrdinal__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>User Logging Level Ordinal</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__UserLoggingLevel__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>User Logging Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__UserRoleId__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>User Role ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__UserRoleName__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>User Role Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__UserType__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>User Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Log Entry Event</label>
    <pluralLabel>Log Entry Events</pluralLabel>
</CustomObject>